gr-digital: Fix Header/Payload Demux block .yml file.
To match block C++ constructor, Sample Rate should be real.

Signed-off-by: Ron Economos <w6rz@comcast.net>

--- a/gr-digital/grc/digital_header_payload_demux.block.yml
+++ b/gr-digital/grc/digital_header_payload_demux.block.yml
@@ -50,7 +50,7 @@ parameters:
     default: '"rx_time"'
 -   id: samp_rate
     label: Sampling Rate
-    dtype: int
+    dtype: real
     default: samp_rate
 -   id: special_tags
     label: Special Tag Keys
